syntax = "proto3";

package rpg.monsters.v1;

option csharp_namespace = "WebServer.Protos.Monsters";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// === Messages ===
message MonsterStatPb {
  int32 monster_id   = 1;
  int32 level        = 2;
  int32 hp           = 3;
  int32 atk          = 4;
  int32 def          = 5;
  int32 spd          = 6;
  double crit_rate   = 7;  // decimal -> double
  double crit_damage = 8;  // decimal -> double
}

message MonsterPb {
  int32 id = 1;
  string name = 2;
  string model_key = 3;
  google.protobuf.Int32Value element_id = 4;  // nullable
  google.protobuf.Int32Value portrait_id = 5; // nullable
  repeated MonsterStatPb stats = 6;
}
message MonsterListResponsePb {
  int64 version = 1;             
  repeated MonsterPb monsters = 2;  
}
message MonsterIdRequestPb {
  int32 id = 1;
}
 
message ReloadResultPb {
  int32 count = 1; // 리로드 후 몬스터 개수
} 